# Civil

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/app/: main.py  seed.py
apps/backend/app/alembic/: env.py
apps/backend/app/alembic/versions/: 0001_initial.py
apps/backend/app/api/v1/: __init__.py
apps/backend/app/api/v1/routers/: auth.py  constraints.py  health.py  site_twin.py  variant.py
apps/backend/app/core/: config.py  deps.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  constraint.py  site_twin.py  user.py  variant.py
apps/backend/app/schemas/: __init__.py  constraint.py  sitetwin.py  user.py  variant.py
apps/backend/tests/: test_auth.py  test_variant.py
apps/frontend/: Dockerfile  next.config.mjs  package.json  tsconfig.json
apps/frontend/e2e/: example.spec.ts
apps/frontend/src/app/: page.tsx
apps/frontend/src/components/: Hello.test.tsx  Hello.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/state/: store.ts
scripts/unix/: db_reset.sh  gen_client.sh  seed.sh  setup.sh  start_all.sh  start_backend.sh  start_frontend.sh
scripts/windows/: db_reset.bat  gen_client.bat  seed.bat  setup.bat  start_all.bat  start_backend.bat  start_frontend.bat
